[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Objects/gate/Gate.gd" type="Script" id=2]
[ext_resource path="res://Sprites/wall.png" type="Texture" id=3]
[ext_resource path="res://Objects/gate/PowerSource.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.5, 14.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.5, 33.5 )

[node name="GateSet" type="Node"]

[node name="PowerSource" type="Area2D" parent="." groups=[
"drag",
]]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PowerSource"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="PowerSource"]
position = Vector2( -1.90735e-06, -9.53674e-07 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="EndPoint" type="Position2D" parent="."]

[node name="Gate" type="Area2D" parent="." groups=[
"drag",
]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gate"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Gate"]
texture = ExtResource( 3 )

[connection signal="body_entered" from="PowerSource" to="Gate" method="_on_PowerSource_body_entered"]
[connection signal="body_entered" from="Gate" to="Gate" method="_on_Gate_body_entered"]
